test/input/invalid/delete.js
function f(x) {
    delete x;
}

function g(x) {
    "use strict";
    delete x;
}
